# containerized-app-exercise-team9

./: README.md  docker-compose.yml
.github/workflows/: github-actions-demo.yml  machine-learning.yml  web-app.yml  webapp.yml
machine-learning-client/: Dockerfile  pyproject.toml  transcribe_audio.py
machine-learning-client/tests/: test.py  test.txt  test_matching_words.py
machine-learning-client/web-app/: app.py  credentials.py  db.py  docker-requirements.txt  flask.cgi  generate_text.py  index.py  mongodb.py  record.py  requirements.txt  transcribe_audio.py
machine-learning-client/web-app/templates/: index.html  record.html  results.html  scripts.js
machine-learning-client/web-app/tests/: .test.wav.icloud  test.py  test_matching_words.py  test_transcribe.py
web-app/: Dockerfile  app.py  handler.py  pyproject.toml
web-app/templates/: all.html  index.html  result.html
web-app/tests/: test.py  test_web_app.py
